@@ -11,6 +11,7 @@ import top.voidc.ir.machine.*;
 import top.voidc.ir.ice.type.IceType;
 import top.voidc.ir.ice.instruction.IceAllocaInstruction;
 
+import static top.voidc.ir.machine.InstructionSelectUtil.canBeReg;
 import static top.voidc.ir.machine.InstructionSelectUtil.canBeStackSlot;
 
 /**
@@ -174,23 +175,25 @@ public class MemoryAllocationPattern {
             return null;
         }
 
+        // void *memset(void *str, int c, size_t n);
         @Override
         public IceMachineValue emit(InstructionSelector selector, IceIntrinsicInstruction value) {
-            // TODO len 小于 8 的直接换成STR wzr
-            var slot = (IceStackSlot) selector.emit(value.getParameters().getFirst());
-            var val = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(1)); // 支持常量其他不管了
-            var len = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(2));
+            // TODO len 小于 8 的直接换成NEON STR wzr
+
             // 第四位是 volatile 位直接不管了
 
             // TODO 先想办法保存原来的寄存器值
             var x0 = selector.getMachineFunction().getPhysicalRegister("x0").createView(IceType.I64); // 第一个参数是地址
             var x1 = selector.getMachineFunction().getPhysicalRegister("x1").createView(IceType.I32); // 第二个参数是值
             var x2 = selector.getMachineFunction().getPhysicalRegister("x2").createView(IceType.I32); // 第三个参数是长度
-
+            var slot = (IceStackSlot) selector.emit(value.getParameters().getFirst());
             selector.addEmittedInstruction(new ARM64Instruction("ADD {dst}, sp, {local-offset:offset}", x0, slot));
+            var val = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(1)); // 支持常量其他不管了
             selector.addEmittedInstruction(new ARM64Instruction("MOV {dst}, {src}", x1, val));
+            var len = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(2));
             selector.addEmittedInstruction(new ARM64Instruction("MOV {dst}, {src}", x2, len));
             selector.addEmittedInstruction(new ARM64Instruction("BL memset"));
+            selector.getMachineFunction().setHasCall(true);
             return null;
         }
 
@@ -202,8 +205,10 @@ public class MemoryAllocationPattern {
         @Override
         public boolean test(InstructionSelector selector, IceValue value) {
             return value instanceof IceIntrinsicInstruction intrinsic
-                    && canBeStackSlot(selector, intrinsic.getParameters().getFirst())
-                    && intrinsic.getIntrinsicName().equals(IceIntrinsicInstruction.MEMSET);
+                    && intrinsic.getIntrinsicName().equals(IceIntrinsicInstruction.MEMSET)
+                    && canBeStackSlot(selector, intrinsic.getParameters().get(0))
+                    && canBeReg(selector, intrinsic.getParameters().get(1))
+                    && canBeReg(selector, intrinsic.getParameters().get(2));
         }
     }
 
@@ -223,13 +228,11 @@ public class MemoryAllocationPattern {
             // TODO len 小于 8 的直接换成STR wzr
             var slot = (IceStackSlot) selector.emit(value.getParameters().getFirst());
             var src = (IceGlobalVariable) value.getParameters().get(1); // 支持常量其他不管了
-            var len = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(2));
             // 第四位是 volatile 位直接不管了
 
             var addrReg = selector.getMachineFunction().allocateVirtualRegister(src.getType());
 
-            selector.addEmittedInstruction(new ARM64Instruction("ADRP {dst}, " + src.getName(), addrReg));
-            selector.addEmittedInstruction(new ARM64Instruction("ADD {dst}, {addr}, :lo12:" + src.getName(), addrReg, addrReg));
+
 
             // TODO 先想办法保存原来的寄存器值
             var x0 = selector.getMachineFunction().getPhysicalRegister("x0").createView(IceType.I64); // 第一个参数是地址
@@ -237,9 +240,15 @@ public class MemoryAllocationPattern {
             var x2 = selector.getMachineFunction().getPhysicalRegister("x2").createView(IceType.I32); // 第三个参数是长度
 
             selector.addEmittedInstruction(new ARM64Instruction("ADD {dst}, sp, {local-offset:offset}", x0, slot)); // dst
+
+            selector.addEmittedInstruction(new ARM64Instruction("ADRP {dst}, " + src.getName(), addrReg));
+            selector.addEmittedInstruction(new ARM64Instruction("ADD {dst}, {addr}, :lo12:" + src.getName(), addrReg, addrReg));
             selector.addEmittedInstruction(new ARM64Instruction("MOV {dst}, {src}", x1, addrReg)); // src
+
+            var len = (IceMachineRegister.RegisterView) selector.emit(value.getParameters().get(2));
             selector.addEmittedInstruction(new ARM64Instruction("MOV {dst}, {src}", x2, len));
             selector.addEmittedInstruction(new ARM64Instruction("BL memcpy"));
+            selector.getMachineFunction().setHasCall(true);
             return null;
         }
 
@@ -251,8 +260,9 @@ public class MemoryAllocationPattern {
         @Override
         public boolean test(InstructionSelector selector, IceValue value) {
             return value instanceof IceIntrinsicInstruction intrinsic
-                    && canBeStackSlot(selector, intrinsic.getParameters().getFirst())
-                    && intrinsic.getIntrinsicName().equals(IceIntrinsicInstruction.MEMSET);
+                    && intrinsic.getIntrinsicName().equals(IceIntrinsicInstruction.MEMCPY)
+                    && canBeStackSlot(selector, intrinsic.getParameters().get(0))
+                    && canBeReg(selector, intrinsic.getParameters().get(2));
         }
     }
 }
